[#146] Refactor: 추천 검색어, 최근 검색어 반환타입 리팩토링